--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -91,9 +91,8 @@ ul{
     text-align: center;
     width: 15rem;
     border: 2px solid #f0c419;
-    margin-left: 3rem;
+    margin: 0 0 0 3rem;
     height: auto;
-    display: inline-block;
     float: left;
 }
 
@@ -114,6 +113,18 @@ ul a:hover li{
     color: #f0c419;
 }
 
+#sliderBlock{
+    display: inline-block;
+    overflow: hidden;
+}
+
+#sliderBlock span{
+    position: relative;
+    right: 4rem;
+    bottom: 1rem;
+    margin: 0 0.2rem;
+}
+
 #imageSlider {
     display: inline-block;
     height: 20rem;
@@ -121,14 +132,14 @@ ul a:hover li{
     /*margin-left: 5rem;*/
     /*margin-bottom: 12rem;*/
     background-size: cover;
-    float: left;
+    overflow: hidden;
 }
 
 .highlighter{
     display: inline-block;
     border: 0.3px solid #d5d5d5;
     width: 15rem;
-    float: left;
+    /*float: left;*/
 }
 .highlighter h3{
     text-align: left;
