--- a/react-app/src/css/QnA.css
+++ b/react-app/src/css/QnA.css
@@ -7,9 +7,11 @@ body{
 
 /* QwriteArea */
 #QwriteArea{
+    display: inline-block;
     width: calc(100% - 400px);
     min-width: 900px;
     height: 500px;
+    margin-left: 50px;
     border: 1px solid;
 }
 #title{
