--- a/react-app/src/css/PostList.css
+++ b/react-app/src/css/PostList.css
@@ -1,112 +1,126 @@
 
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
 #PostDetails{
-    
+    margin: 2em;
 }
 
 #cardContent{
-
+    margin-left: none;
 }
 
-#searchForm{
+
+#post-list #searchForm{
     float: right;
     margin-top: 0.5rem;
 }
 
-#content{
-    width: 60em;
+#post-list #content{
+    width: 100%;
     height: 10%;
     
 }
 
-.highText{
+#post-list .highText{
     font-family: "Nanum Gothic", sans-serif;
     font-size: 2em;
     color: #8A8C8F;
+    margin-left: 1em;
 }
 
-.underLine{
-    height: 1px;
+#post-list .underLine{
+    border-color: #8A8C8F;
+    border-style: solid;
     background-color: #8A8C8F;
+    height: 1px;
+    width: 78%;
+    margin-right: 1em;
+    margin-top: 0.1em;    
 }
 
 
-
-.search{
+#post-list .search{
     font-family: "Nanum Gothic", sans-serif;
     -webkit-appearance:textfield;
     box-sizing: content-box;
     height: 2.5em;
     width: 30em;
+    margin-bottom: 1em;
 }
-.searchButt{
+#post-list .searchButt{
     float: right;
     height: 3em;
     width: 3rem;
     background-color: white;
     border: 0.1px solid #8A8C8F;
-    outline: none;
 }
 
-.type{
+#post-list .type{
     font-family: "Nanum Gothic", sans-serif;
     display: inline-block;
     color: #828587;
-    padding: 3em;
+    padding: 2em;
+    margin-left: 2em;
+    font-size: 1.2em;
 
 }
+#label-project{
+    margin-right: 1em;
+}
 
-input[id="projectCheck"] + label {
-  display: inline-block;
+
+#post-list input[id="projectCheck"] + label {
+
+    /* 
+display: inline-block; 
+   */
+  
+}
+
+#post-list input[id="projectCheck"]:checked + label:after {
+  /* content: '\2714';
+  font-size: 14px;
+  padding: none;
+  color: green; */
+}
+
+#post-list input[id="projectCheck"] {
+  /* display: none; */
+}
+
+#post-list input[id="clubCheck"] + label {
+  /* display: inline-block;
   width: 14px;
   height: 14px;
   border: 1px solid #bcbcbc;
   cursor: pointer;
   position: relative;
-  top: 2px;
+  top: 2px; */
   
 }
 
-input[id="projectCheck"]:checked + label:after {
-  content: '\2714';
+#post-list input[id="clubCheck"]:checked + label:after {
+  /* content: '\2714';
   font-size: 14px;
   padding: none;
-  color: green;
+  color: green; */
 }
 
-input[id="projectCheck"] {
-  display: none;
+#post-list input[id="clubCheck"] {
+  /* display: none; */
 }
 
-input[id="clubCheck"] + label {
-  display: inline-block;
-  width: 14px;
-  height: 14px;
-  border: 1px solid #bcbcbc;
-  cursor: pointer;
-  position: relative;
-  top: 2px;
-  
-}
 
-input[id="clubCheck"]:checked + label:after {
-  content: '\2714';
-  font-size: 14px;
-  padding: none;
-  color: green;
-}
-
-input[id="clubCheck"] {
-  display: none;
-}
-
-input[id= "writeButton"]{
+#post-list .writeButton{
     float: right;
-    font-size: 5em;
+    font-size: 1.5em;
+    margin-right: 1em;
+    margin-top: 1em;
+
 }
 
 
-.users{
+#post-list .users{
     float: left;
     padding: 1em;
     position: relative;
@@ -115,12 +129,12 @@ input[id= "writeButton"]{
 }
 
 
-.topdetails{
+#post-list .topdetails{
     border: 1px solid black;
     border-bottom: none;
     height: 4em;
 }
-.cardType{
+#post-list .cardType{
     font-family: "Nanum Gothic", sans-serif;
     color: #219AC7;
     position: relative;
@@ -129,43 +143,45 @@ input[id= "writeButton"]{
     font-size: 1.1em;
 }
 
-.card{
+#post-list .card{
+    
     margin-bottom: 1em;
     margin-right: 1em;
-    margin-left: 1em;
+    margin-left: 3em;
+    width: 35%;
     display: inline-block;
 
 }
 
-.title{
+#post-list .title{
     position: relative;
     top: 0.7em;
     font-size: 1.8em;
     color: #8E9092;
 }
 
-.details{
+#post-list .details{
     background-color: #D6EFF7;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height: 8em;
 }
 
-.userscount{
+#post-list .userscount{
     font-family: "Nanum Gothic", sans-serif;
     font-size: 2em;
     color: #229FC7;
   
 }
 
-.others{
+#post-list .others{
 position: relative;
 padding: 2em;
 padding-left: 5em;
 display: inline-block;
 }
 
-.majorDiv{
+#post-list .majorDiv{
     font-family: "Nanum Gothic", sans-serif;
     font-size: 1.2em;
     color: #229FC7;
@@ -173,7 +189,7 @@ display: inline-block;
     display: inline-block;
 }
 
-.optionDiv{
+#post-list .optionDiv{
 font-family: "Nanum Gothic", sans-serif;
     font-size: 1.2em;
     color: #229FC7;
