--- a/application/app/src/main/res/values/styles.xml
+++ b/application/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
         <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
+    <style name="DialogWindowTitle">
+        <item name="android:textAppearance">@color/colorPrimary</item>
+    </style>
+
 </resources>
