--- a/application/app/src/main/res/layout/fragment_developer_intro.xml
+++ b/application/app/src/main/res/layout/fragment_developer_intro.xml
@@ -1,14 +1,54 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.sinabro.application.fragments.DeveloperIntro">
+    android:orientation="vertical"
+    android:background="#7CB342"
+    tools:context="org.sinabro.application.fragments.CommunityIntro">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_gravity="center"
-        android:textSize="30sp"
+
+    <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_weight="5"
+        android:layout_height="0dp">
+
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="3">
+
+        <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text="개발자 설명 페이지" />
-</FrameLayout>
+        android:layout_weight="1">
+            
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"/>
+            
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"></LinearLayout>
+
+</LinearLayout>
