--- a/application/app/src/main/res/layout/fragment_play_intro.xml
+++ b/application/app/src/main/res/layout/fragment_play_intro.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#fff"
     tools:context="org.sinabro.application.fragments.PlayIntro">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="#000"
         android:text="사용방법 페이지" />
 
     <Button
