--- a/application/app/src/main/res/layout/fragment_developer_intro.xml
+++ b/application/app/src/main/res/layout/fragment_developer_intro.xml
@@ -1,195 +1,134 @@
-< xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#7CB342"
+    android:background="#968ebd"
     tools:context="org.sinabro.application.fragments.CommunityIntro">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5">
+        android:layout_height="wrap_content">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Developers who have developed Damunity"
-        android:textSize="16sp" />
-
-
-    <TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="4dp"
             android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginTop="4dp"
             android:text="skip"
             android:textColor="#fff"
             android:textSize="16sp" />
-
 
     </RelativeLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="3">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.9">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bg_circle_profile"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/circleimage"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FFFFFFFF"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
 
-            <android.support.v7.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
-                app:cardCornerRadius="4dp"
-                android:backgroundTint="#33691E"
-                android:layout_marginBottom="16dp"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:orientation="vertical"
+                android:paddingTop="12dp">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_marginTop="4dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:text="윤정현"
-                    android:layout_marginBottom="4dp"
-                    android:textColor="#fff" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.9" />
 
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
+                    <LinearLayout
+                        android:id="@+id/current_view_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="0.1"
+                        android:gravity="center"
+                        android:orientation="horizontal"></LinearLayout>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_profile_1"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/circleimage"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FFFFFFFF"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.6">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                app:cardCornerRadius="4dp"
-                android:backgroundTint="#33691E"
-                android:layout_marginBottom="16dp"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:layout_height="wrap_content">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/name_2"
-                        android:layout_marginTop="4dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:text="박태임"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#fff" />
+                            <TextView
+                                android:id="@+id/first"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginLeft="8dp"
+                                android:text="Welcome to our community."
+                                android:textColor="#fff"
+                                android:textSize="16sp" />
 
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </RelativeLayout>
+                            <TextView
+                                android:id="@+id/second"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/first"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="4dp"
+                                android:text="This application is for DSM Student"
+                                android:textColor="#fff"
+                                android:textSize="16sp" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/second"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="4dp"
+                                android:text="Please use it well."
+                                android:textColor="#fff"
+                                android:textSize="16sp" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_profile_2"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/circleimage"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FFFFFFFF"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
+                            <Button
+                                android:id="@+id/next_button"
+                                android:layout_width="100dp"
+                                android:layout_height="40dp"
+                                android:layout_alignParentBottom="true"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginBottom="16dp"
+                                android:background="@drawable/button3"
+                                android:text="Next it"
+                                android:textColor="#fff" />
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                app:cardCornerRadius="4dp"
-                android:backgroundTint="#33691E"
-                android:layout_marginBottom="16dp"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:layout_height="wrap_content">
+                        </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/name_3"
-                        android:layout_marginTop="4dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:text="고수민"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#fff" />
+                    </LinearLayout>
+                </LinearLayout>
 
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </RelativeLayout>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
-
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/button3"
-            android:text="Next it"
-            android:textColor="#fff" />
-    </RelativeLayout>
-
 </LinearLayout>
