--- a/application/app/src/main/res/layout/fragment_community_intro.xml
+++ b/application/app/src/main/res/layout/fragment_community_intro.xml
@@ -49,6 +49,11 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:src="@drawable/intro1"
+                        android:scaleType="fitXY"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="0.9" />
