--- a/application/app/src/main/res/layout/activity_postingpage.xml
+++ b/application/app/src/main/res/layout/activity_postingpage.xml
@@ -9,8 +9,44 @@
         android:id="@+id/toolbar_postingpage"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#F2F2F2">
+        android:background="#FFCA28">
 
+        <ImageView
+            android:id="@+id/back_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_arrow_back_black_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="글쓰기"
+            android:textColor="#FFFFFF"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/check_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/posting_icon"
+                android:layout_alignParentRight="true"/>
+
+            <ImageView
+                android:id="@+id/photo_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/photo_icon"
+                android:layout_toLeftOf="@id/check_icon"/>
+
+        </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
@@ -23,23 +59,23 @@
             android:id="@+id/titleEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:hint="제목"
-            android:padding="10dp"
-            android:background="@null"/>
+            android:padding="10dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#D8D8D8"
             android:layout_centerInParent="true"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:background="#D8D8D8" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@null"
             android:gravity="top"
-            android:padding="10dp"
             android:hint="내용"
-            android:background="@null"/>
+            android:padding="10dp" />
     </LinearLayout>
 </LinearLayout>
