--- a/application/app/src/main/res/values/colors.xml
+++ b/application/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#11a7dc</color>
     <color name="colorPrimaryDark">#000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFCA28</color>
 </resources>
