--- a/application/app/src/main/res/layout/activity_main.xml
+++ b/application/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
             android:background="#FFCA28"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabTextColor="#fff"
+            app:tabSelectedTextColor="#FFC107"
             app:tabIndicatorColor="@android:color/white" />
 
     </android.support.design.widget.AppBarLayout>
