--- a/application/app/src/main/res/layout/activity_main.xml
+++ b/application/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabTextColor="#fff"
-            app:tabSelectedTextColor="#FFC107"
+            app:tabSelectedTextColor="#9E9E9E"
             app:tabIndicatorColor="@android:color/white" />
 
     </android.support.design.widget.AppBarLayout>
