--- a/application/app/src/main/res/layout/activity_postingpage.xml
+++ b/application/app/src/main/res/layout/activity_postingpage.xml
@@ -70,12 +70,25 @@
             android:layout_margin="5dp"
             android:background="#D8D8D8" />
 
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@null"
-            android:gravity="top"
-            android:hint="내용"
-            android:padding="10dp" />
+            android:orientation="vertical">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@null"
+                android:gravity="top"
+                android:hint="내용"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/contentImg"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"/>
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
