--- a/application/app/src/main/res/layout/fragment_developer_intro.xml
+++ b/application/app/src/main/res/layout/fragment_developer_intro.xml
@@ -49,6 +49,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:src="@drawable/intro2"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="0.9" />
