--- a/application/app/src/main/res/layout/toolbar.xml
+++ b/application/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
+    android:background="#FFC107"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
