--- a/application/app/src/main/res/layout/activity_recruit_list.xml
+++ b/application/app/src/main/res/layout/activity_recruit_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -26,7 +25,8 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -39,12 +39,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addListBtn"
-            android:layout_margin="15dp"
-            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:elevation="10dp"
             android:background="@color/colorPrimary"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:elevation="10dp"/>
+            android:layout_gravity="bottom|right">
+        </android.support.design.widget.FloatingActionButton>
+    </android.support.design.widget.CoordinatorLayout>
 
-    </RelativeLayout>
 </LinearLayout>
